assets/css/base.css
:root {
	--background-color: #1d1f21;
	--foreground-color: #c5c8c6;

	--color0: #282a2e;
	--color1: #a54242;
	--color2: #8c9440;
	--color3: #de935f;
	--color4: #5f819d;
	--color5: #85678f;
	--color6: #5e8d87;
	--color7: #707880;

	--color8: #373b41;
	--color9: #cc6666;
	--color10: #b5bd68;
	--color11: #f0c674;
	--color12: #81a2be;
	--color13: #b294bb;
	--color14: #8abeb7;
	--color15: #c5c8c6;
}

body {
	background-color: var(--background-color);
	color: var(--foreground-color);
	max-width: 80em;
	margin: 0 auto;
}

a:link, a:visited {
	color: var(--color3);
	text-decoration: none;
}

a:hover {
	color: var(--color3);
	text-decoration: underline;
	text-shadow: 0em 0.1em 0.35em var(--color3);
}

.body-content {
	padding-left: 20px;
	padding-right: 20px;
}

.title-navbar {
	margin-top: -20px;
	border-bottom: 2px solid var(--color8);
	padding-bottom: 5px;
}

.title-navbar ul, .title-navbar ul li, .title-navbar li {
	display: inline;
	list-style-type: none;
	padding: 0;
	padding-right: 20px;
	padding-bottom: 5px;
}

.footer {
	border-top: 2px solid var(--color8);
}

.date {
	font-weight: normal;
	font-style: italic;
}

.blog-toc {
	max-width: 480px;
	padding-bottom: 10px;
	padding-left: 10px;
	padding-right: 10px;
	float: left;
	margin-right: 15px;
	border-right: 1px solid var(--color8);
	border-top: 1px solid var(--color8);
	border-bottom: 1px solid var(--color8);
}

.watermelon {
	max-width: 480px;
	padding-bottom: 10px;
	padding-left: 10px;
	padding-right: 10px;
	float: right;
	margin-left: 15px;
	margin-top: -15px;
}

.blog-date {
	margin-top: -15px;
	font-style: italic;
}

.card-title p {
	margin-top: -15px;
}

.blog-img img {
	max-width: 1024px;
	width: auto;
	display: block;
	margin: auto;
}

.blog-img-caption {
	text-align: center;
}

